Updated fully function add record.

--- a/draft/listing.htm
+++ b/draft/listing.htm
@@ -2,13 +2,11 @@
 <head>
 <meta charset="utf-8" />
 <title>Pharmacy...</title>
-<script type="text/javascript" src="listing1.js"></script>
 <script type="text/javascript" src="listing.js"></script>
-<script type="text/javascript" src="listing2.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body onload="listing1();listing2()">
+<body onload="listing1();listing2();">
 <h1>Pharmacy...</h1>
 <ul>
   <li><a href="">Home</a></li>
