--- a/core_files/listing.htm
+++ b/core_files/listing.htm
@@ -58,6 +58,7 @@ $(document).ready(function() {
     })
 });
 </script>
+<label for="saleid"><span id="txt">SaleID :</span><div id="saleid"></div></label></br>
 <div class="container1">
 <label for="itName"><span id="txt">Item Name<span class="redonly">*</span></span><select id="itName"></select></label><input type="button" class="add_form_field" value="Add more item"/>
 <input type="button" onclick="location.href='#';" value="Create new item" /></br></br>
@@ -70,6 +71,6 @@ $(document).ready(function() {
 <input id="button" type="reset" value="Reset"/>
 </fieldset>
 </form>
-<div id="output"><div>
+<div id="output"></div>
 </body>
 </html>
