--- a/core_files/addrecord.htm
+++ b/core_files/addrecord.htm
@@ -10,7 +10,8 @@
 <h1>Pharmacy...</h1>
 <ul>
   <li><a href="">Home</a></li>
-  <li><a href="">Add Record</a></li>
+  <li><a href="addrecord.htm">Add Record</a></li>
+  <li><a href="addstock.htm">Add Stock</a></li>
   <li><a href="">Edit Record</a></li>
   <li><a href="">Manage</a></li>
 </ul>
@@ -18,7 +19,7 @@
 <p class="center"><i>To create a record, enter record details below.</i></p>
 <form>
 <fieldset>
-<legend>Seller Details</legend>
+<legend>Record Details</legend>
 <p class="redonly"><i>*Request Fields</i></p>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script>
