alter accord to sketch

--- a/core_files/addrecord.htm
+++ b/core_files/addrecord.htm
@@ -1,19 +1,19 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Pharmacy...</title>
+<title>TargaPharm Retail & Inventory Management</title>
 <script type="text/javascript" src="addrecord.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body onload="addrecord1();addrecord2();">
-<h1>Pharmacy...</h1>
+<h1>TargaPharm Retail & Inventory Management</h1>
 <ul>
   <li><a href="">Home</a></li>
-  <li><a href="addrecord.htm">Add Record</a></li>
-  <li><a href="addstock.htm">Add Stock</a></li>
-  <li><a href="">Edit Record</a></li>
-  <li><a href="">Manage</a></li>
+  <li><a href="addrecord.htm">Items</a></li>
+  <li><a href="addstock.htm">Inventory</a></li>
+  <li><a href="">Sales</a></li>
+  <li><a href="">Management</a></li>
 </ul>
 <hr>
 <p class="center"><i>To create a record, enter record details below.</i></p>
