Add item page (new design sketch)

--- a/core_files/addrecord.htm
+++ b/core_files/addrecord.htm
@@ -9,8 +9,8 @@
 <body onload="addrecord1();addrecord2();">
 <h1>TargaPharm Retail & Inventory Management</h1>
 <ul>
-  <li><a href="">Home</a></li>
-  <li><a href="addrecord.htm">Items</a></li>
+  <li><a href="home.htm">Home</a></li>
+  <li><a href="itemdisplay.htm">Items</a></li>
   <li><a href="addstock.htm">Inventory</a></li>
   <li><a href="">Sales</a></li>
   <li><a href="">Management</a></li>
