--- a/core_files/addstock.htm
+++ b/core_files/addstock.htm
@@ -11,7 +11,7 @@
   <li><a href="home.htm">Home</a></li>
   <li><a href="itemdisplay.htm">Items</a></li>
   <li><a href="addstock.htm">Inventory</a></li>
-  <li><a href="">Sales</a></li>
+  <li><a href="saledisplay.htm">Sales</a></li>
   <li><a href="">Management</a></li>
 </ul>
 <hr>
