--- a/core_files/saleedit.htm
+++ b/core_files/saleedit.htm
@@ -2,11 +2,11 @@
 <head>
 <meta charset="utf-8" />
 <title>TargaPharm Retail & Inventory Management</title>
-<script type="text/javascript" src="addrecord.js"></script>
+<script type="text/javascript" src="saleedit.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body onload="addrecord1();addrecord2();">
+<body onload="getsaleid();addrecord1();">
 <h1>TargaPharm Retail & Inventory Management</h1>
 <ul>
   <li><a href="home.htm">Home</a></li>
@@ -16,7 +16,7 @@
   <li><a href="">Management</a></li>
 </ul>
 <hr>
-<p class="center"><i>To create a new sale record, enter details below.</i></p>
+<p class="center"><i>To edit sale record, enter record details below.</i></p>
 <form>
 <fieldset>
 <legend>Sale Record Details</legend>
@@ -68,7 +68,7 @@ $(document).ready(function() {
 </div>
 
 
-<button type="button" onclick="addRecord();">Add Record</button>
+<button type="button" onclick="saleedit();">Edit Record</button>
 <input id="button" type="reset" value="Reset"/>
 </fieldset>
 </form>
