Page adjustment, add management page.

--- a/core_files/management.htm
+++ b/core_files/management.htm
@@ -2,10 +2,9 @@
 <head>
 <meta charset="utf-8" />
 <title>TargaPharm Retail & Inventory Management</title>
-<script type="text/javascript" src="saledetail.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body onload="display();">
+<body>
 <h1>TargaPharm Retail & Inventory Management</h1>
 <ul>
   <li><a href="home.htm">Home</a></li>
@@ -17,11 +16,12 @@
 <hr>
 <form>
 <fieldset>
-<legend>CUSTOMER SALES</legend>
-</br></br>
-<label for="saleid"><span id="txt">SaleID :</span><div id="saleid"></div></label>
-<div id="output"></div>
-</br>
+<h1>TargaPharm Management Console</h1>
+<button type="button" onclick="">Low Stock Items</button>
+<button type="button" onclick="">Display Popular Purchases</button>
+<button type="button" onclick="">Weekly Sales Predictions</button>
+<button type="button" onclick="">Monthly Sales Predictions</button>
+<button type="button" onclick="">Generate .CSV file</button>
 </fieldset>
 </form>
 </body>
