--- a/core_files/saleedit.htm
+++ b/core_files/saleedit.htm
@@ -10,10 +10,10 @@
 <h1>TargaPharm Retail & Inventory Management</h1>
 <ul>
   <li><a href="home.htm">Home</a></li>
-  <li><a href="itemdisplay.htm">Items</a></li>
-  <li><a href="addstock.htm">Inventory</a></li>
+  <li><a href="">Items</a></li>
+  <li><a href="purchasesdisplay.htm">Inventory</a></li>
   <li><a href="saledisplay.htm">Sales</a></li>
-  <li><a href="">Management</a></li>
+  <li><a href="management.htm">Management</a></li>
 </ul>
 <hr>
 <p class="center"><i>To edit sale record, enter record details below.</i></p>
