--- a/core_files/management.htm
+++ b/core_files/management.htm
@@ -17,11 +17,11 @@
 <form>
 <fieldset>
 <h1>TargaPharm Management Console</h1>
-<button type="button" onclick="">Low Stock Items</button>
-<button type="button" onclick="">Display Popular Purchases</button>
-<button type="button" onclick="">Weekly Sales Predictions</button>
-<button type="button" onclick="">Monthly Sales Predictions</button>
-<button type="button" onclick="">Generate .CSV file</button>
+<input type="button" id="management" onclick="" value="Low Stock Items"></input>
+<input type="button" id="management" onclick="" value="Display Popular Purchases"></input>
+<input type="button" id="management" onclick="" value="Weekly Sales Predictions"></input>
+<input type="button" id="management" onclick="" value="Monthly Sales Predictions"></input>
+<input type="button" id="management" onclick="" value="Generate .CSV file"></input>
 </fieldset>
 </form>
 </body>
