--- a/core_files/management.htm
+++ b/core_files/management.htm
@@ -2,6 +2,7 @@
 <head>
 <meta charset="utf-8" />
 <title>TargaPharm Retail & Inventory Management</title>
+<script type="text/javascript" src="management.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -21,7 +22,8 @@
 <input type="button" id="management" onclick="" value="Display Popular Purchases"></input>
 <input type="button" id="management" onclick="" value="Weekly Sales Predictions"></input>
 <input type="button" id="management" onclick="" value="Monthly Sales Predictions"></input>
-<input type="button" id="management" onclick="" value="Generate .CSV file"></input>
+<input type="button" id="management" onclick="selectyear();" value="Generate .CSV file"></input></br></br></br>
+<div id="output"></div>
 </fieldset>
 </form>
 </body>
