add page new item and fix minor error on other page

--- a/core_files/itemdisplay.htm
+++ b/core_files/itemdisplay.htm
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8" />
 <title>TargaPharm Retail & Inventory Management</title>
-<script type="text/javascript" src="purchasesdisplay.js"></script>
+<script type="text/javascript" src="itemdisplay.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body onload="display();">
@@ -17,14 +17,14 @@
 <hr>
 <form>
 <fieldset>
-<legend>STOCK PURCHASES</legend>
+<legend>CUSTOMER SALES</legend>
 </br></br>
 <div id="output"></div>
 </br>
 <button type="button" onclick="change(1);"><</button>
 <button type="button" onclick="change(2);">></button>
 </br></br>
-<button type="button" onclick="window.location.href = 'addstock.htm';">New Stock Purchase</button>
+<button type="button" onclick="window.location.href = 'newItem.htm';">New Item </button>
 </fieldset>
 </form>
 </body>
