--- a/core_files/addrecord.htm
+++ b/core_files/addrecord.htm
@@ -10,7 +10,7 @@
 <h1>TargaPharm Retail & Inventory Management</h1>
 <ul>
   <li><a href="home.htm">Home</a></li>
-  <li><a href="">Items</a></li>
+  <li><a href="itemdisplay.htm">Items</a></li>
   <li><a href="purchasesdisplay.htm">Inventory</a></li>
   <li><a href="saledisplay.htm">Sales</a></li>
   <li><a href="management.htm">Management</a></li>
