--- a/core_files/addrecord.htm
+++ b/core_files/addrecord.htm
@@ -62,7 +62,7 @@ $(document).ready(function() {
 <label for="saleid"><span id="txt">SaleID :</span><div id="saleid"></div></label></br>
 <div class="container1">
 <label for="itName"><span id="txt">Item Name<span class="redonly">*</span></span><select id="itName"></select></label><input type="button" class="add_form_field" value="Add more item"/>
-<input type="button" onclick="location.href='#';" value="Create new item" /></br></br>
+<input type="button" onclick="location.href='newItem.htm';" value="Create new item" /></br></br>
 <label for="itQuan"><span id="txt">Sale Quantity<span class="redonly">*</span></span><input type="txt" name="itQuan" id="itQuan" size="50"/></label></br></br>
 <label for="sPrice"><span id="txt">Sale Price<span class="redonly">*</span></span><input type="txt" name="sPrice" id="sPrice" size="50"/></label></br></br>
 </div>
