--- a/core_files/addstock.htm
+++ b/core_files/addstock.htm
@@ -20,7 +20,7 @@
 <fieldset>
 <legend>Record Details</legend>
 <p class="redonly"><i>*Request Fields</i></p>
-<label for="itName"><span id="txt">Item Name<span class="redonly">*</span></span><select id="itName"></select></label><input type="button" onclick="location.href='#';" value="Create new item" /></br></br>
+<label for="itName"><span id="txt">Item Name<span class="redonly">*</span></span><select id="itName"></select></label><input type="button" onclick="location.href='newItem.htm';" value="Create new item" /></br></br>
 <label for="itQuan"><span id="txt">Item Quantity<span class="redonly">*</span></span><input type="txt" name="itQuan" id="itQuan" size="50"/></label></br></br>
 <label for="sPrice"><span id="txt">Wholesale Unit Price<span class="redonly">*</span></span><input type="txt" name="sPrice" id="sPrice" size="50"/></label></br></br>
 
