--- a/core_files/newItem.htm
+++ b/core_files/newItem.htm
@@ -1,13 +1,13 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Pharmacy...</title>
+<title>TargaPharm Retail & Inventory Management</title>
 <script type="text/javascript" src="newItem.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Pharmacy...</h1>
+<h1>TargaPharm Retail & Inventory Management</h1>
 <ul>
   <li><a href="home.htm">Home</a></li>
   <li><a href="itemdisplay.htm">Items</a></li>
