Add monthly report func.

--- a/core_files/management.htm
+++ b/core_files/management.htm
@@ -21,7 +21,7 @@
 <input type="button" id="management" onclick="" value="Low Stock Items"></input>
 <input type="button" id="management" onclick="" value="Display Popular Purchases"></input>
 <input type="button" id="management" onclick="" value="Weekly Sales Predictions"></input>
-<input type="button" id="management" onclick="" value="Monthly Sales Predictions"></input>
+<input type="button" id="management" onclick="selectmonth();" value="Monthly Sales Report"></input>
 <input type="button" id="management" onclick="selectyear();" value="Generate .CSV file"></input></br></br></br>
 <div id="output"></div>
 </fieldset>
