--- a/core_files/management.htm
+++ b/core_files/management.htm
@@ -18,8 +18,8 @@
 <form>
 <fieldset>
 <h1>TargaPharm Management Console</h1>
-<input type="button" id="management" onclick="" value="Low Stock Items"></input>
-<input type="button" id="management" onclick="" value="Display Popular Purchases"></input>
+<input type="button" id="management" onclick="lowstock();" value="Low Stock Items"></input>
+<input type="button" id="management" onclick="popularbutton();" value="Display Popular Purchases"></input>
 <input type="button" id="management" onclick="" value="Weekly Sales Predictions"></input>
 <input type="button" id="management" onclick="selectmonth();" value="Monthly Sales Report"></input>
 <input type="button" id="management" onclick="selectyear();" value="Generate .CSV file"></input></br></br></br>
