--- a/core_files/newItem.htm
+++ b/core_files/newItem.htm
@@ -29,9 +29,10 @@
   <option value="Analgesic">Analgesic</option>
   <option value="Personal Hygiene">Personal Hygiene</option>
   <option value="Throat Lozenge">Throat Lozenge</option>
-</select>
-</div>
+</select></label></br></br>
+<label for="price"><span id="txt">Retail Price<span class="redonly">*</span></span><input type="txt" name="price" id="price" size="70"/></label></br></br>
 </br>
+</div>
 
 <button type="button" onclick="creating();">Create</button>
 <input id="button" type="reset" value="Reset"/>
