--- a/core_files/newItem.htm
+++ b/core_files/newItem.htm
@@ -2,11 +2,11 @@
 <head>
 <meta charset="utf-8" />
 <title>TargaPharm Retail & Inventory Management</title>
+<script type="text/javascript" src="checkcred.js"></script>
 <script type="text/javascript" src="newItem.js"></script>
-
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body onload="checkcre();">
 <h1>TargaPharm Retail & Inventory Management</h1>
 <ul>
   <li><a href="home.htm">Home</a></li>
@@ -14,6 +14,7 @@
   <li><a href="purchasesdisplay.htm">Inventory</a></li>
   <li><a href="saledisplay.htm">Sales</a></li>
   <li><a href="management.htm">Management</a></li>
+  <li><a href="#" onclick="logout();">Logout</a></li>
 </ul>
 <hr>
 <p class="center"><i>To create a new item, enter item details below.</i></p>
