--- a/core_files/saledisplay.htm
+++ b/core_files/saledisplay.htm
@@ -2,10 +2,11 @@
 <head>
 <meta charset="utf-8" />
 <title>TargaPharm Retail & Inventory Management</title>
+<script type="text/javascript" src="checkcred.js"></script>
 <script type="text/javascript" src="saledisplay.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body onload="display();">
+<body onload="checkcre();display();">
 <h1>TargaPharm Retail & Inventory Management</h1>
 <ul>
   <li><a href="home.htm">Home</a></li>
@@ -13,6 +14,7 @@
   <li><a href="purchasesdisplay.htm">Inventory</a></li>
   <li><a href="saledisplay.htm">Sales</a></li>
   <li><a href="management.htm">Management</a></li>
+  <li><a href="#" onclick="logout();">Logout</a></li>
 </ul>
 <hr>
 <form>
