weekly sales report + fixes s #1

--- a/core_files/home.htm
+++ b/core_files/home.htm
@@ -13,6 +13,7 @@
   <li><a href="purchasesdisplay.htm">Inventory</a></li>
   <li><a href="saledisplay.htm">Sales</a></li>
   <li><a href="management.htm">Management</a></li>
+  <li><a href="#" >Logout</a></li>
 </ul>
 <hr>
 <form>
