--- a/core_files/management.htm
+++ b/core_files/management.htm
@@ -22,9 +22,10 @@
 <h1>TargaPharm Management Console</h1>
 <input type="button" id="management" onclick="lowstock();" value="Low Stock Items"></input>
 <input type="button" id="management" onclick="popularbutton();" value="Display Popular Purchases"></input>
-<input type="button" id="management" onclick="" value="Weekly Sales Predictions"></input>
+</br>
+<input type="button" id="management" onclick="selectweek();" value="Weekly Sales Report"></input>
 <input type="button" id="management" onclick="selectmonth();" value="Monthly Sales Report"></input>
-<input type="button" id="management" onclick="selectyear();" value="Generate .CSV file"></input></br></br></br>
+<input type="button" id="management" onclick="selectyear();" value="Yearly Sales Report"></input></br></br></br>
 <div id="output"></div>
 </fieldset>
 </form>
