--- a/core_files/home.htm
+++ b/core_files/home.htm
@@ -2,6 +2,7 @@
 <head>
 <meta charset="utf-8" />
 <title>TargaPharm Retail & Inventory Management</title>
+<script type="text/javascript" src="checkcred.js"></script>
 <script type="text/javascript" src="home.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -13,7 +14,7 @@
   <li><a href="purchasesdisplay.htm">Inventory</a></li>
   <li><a href="saledisplay.htm">Sales</a></li>
   <li><a href="management.htm">Management</a></li>
-  <li><a href="#" >Logout</a></li>
+  <li><a href="#" onclick="logout();">Logout</a></li>
 </ul>
 <hr>
 <form>
