Security func refinement (add access log)

--- a/core_files/management.htm
+++ b/core_files/management.htm
@@ -30,6 +30,7 @@
 <h3>Account management</h3>
 <input type="button" id="management" onclick="addacc();" value="New staff account"></input>
 <input type="button" id="management" onclick="addadacc();" value="New admin account"></input>
+<input type="button" id="management" onclick="log();" value="Access log"></input>
 </br></br>
 <div id="output"></div>
 </fieldset>
